--- a/src/BlazorMVVM/Pages/Counter/Counter.razor
+++ b/src/BlazorMVVM/Pages/Counter/Counter.razor
@@ -16,7 +16,7 @@
 @code
 {
     private IVMDataSource counterVMDataSource;
-    public CounterVM counterVM;  
+    private CounterVM counterVM;  
 
     protected override async Task OnInitializedAsync()
     {       
